compiler/test-data/parser/scheme/errors/virtual_without_expression.frel
module test

scheme User {
    firstName : String
    lastName : String
    virtual fullName : String
}
